err/gclient-service-account-auth.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/.libs_cffi_backend'...
Listing './lib/python3.5/site-packages/OpenSSL'...
Listing './lib/python3.5/site-packages/apiclient'...
Compiling './lib/python3.5/site-packages/apiclient/discovery.py'...
***   File "./lib/python3.5/site-packages/apiclient/discovery.py", line 202
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/apiclient/http.py'...
***   File "./lib/python3.5/site-packages/apiclient/http.py", line 1326
    except HttpError, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/asn1crypto'...
Listing './lib/python3.5/site-packages/asn1crypto/_perf'...
Listing './lib/python3.5/site-packages/asn1crypto-0.24.0.dist-info'...
Listing './lib/python3.5/site-packages/cffi'...
Listing './lib/python3.5/site-packages/cffi-1.11.3.dist-info'...
Listing './lib/python3.5/site-packages/cryptography'...
Listing './lib/python3.5/site-packages/cryptography/hazmat'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/backends'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/backends/openssl'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/bindings'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/bindings/openssl'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/asymmetric'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/ciphers'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/kdf'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/twofactor'...
Listing './lib/python3.5/site-packages/cryptography/x509'...
Listing './lib/python3.5/site-packages/cryptography-2.1.4.dist-info'...
Listing './lib/python3.5/site-packages/gclient_service_account_auth-0.2.2.dist-info'...
Listing './lib/python3.5/site-packages/google_api_python_client-1.2.egg-info'...
Listing './lib/python3.5/site-packages/httplib2'...
Listing './lib/python3.5/site-packages/httplib2-0.10.3.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/oauth2client'...
Compiling './lib/python3.5/site-packages/oauth2client/appengine.py'...
***   File "./lib/python3.5/site-packages/oauth2client/appengine.py", line 190
    except app_identity.Error, e:
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/oauth2client/file.py'...
***   File "./lib/python3.5/site-packages/oauth2client/file.py", line 95
    old_umask = os.umask(0177)
                            ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/oauth2client/gce.py'...
***   File "./lib/python3.5/site-packages/oauth2client/gce.py", line 86
    except StandardError, e:
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/oauth2client/locked_file.py'...
***   File "./lib/python3.5/site-packages/oauth2client/locked_file.py", line 125
    except IOError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/oauth2client/multistore_file.py'...
***   File "./lib/python3.5/site-packages/oauth2client/multistore_file.py", line 274
    old_umask = os.umask(0177)
                            ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/oauth2client/old_run.py'...
***   File "./lib/python3.5/site-packages/oauth2client/old_run.py", line 99
    except socket.error, e:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/oauth2client/tools.py'...
***   File "./lib/python3.5/site-packages/oauth2client/tools.py", line 166
    except socket.error, e:
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyOpenSSL-17.5.0.dist-info'...
Listing './lib/python3.5/site-packages/pycparser'...
Listing './lib/python3.5/site-packages/pycparser/ply'...
Listing './lib/python3.5/site-packages/pycparser-2.18.egg-info'...
Listing './lib/python3.5/site-packages/service_account_auth'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/uritemplate'...
Listing './share'...
Listing './share/python-wheels'...
